# aqueduct-poc-bravo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  dagster_cloud.yaml  docker-compose.yml  pyproject.toml  release-please-config.json
.dlt/: config.toml  secrets.toml.example
.github/workflows/: branch_deployments.yml  ci.yml  deploy.yml  pr-title-lint.yml  release-please.yml
docs/: STORAGE_CONVENTIONS.md
src/aqueduct_dagster/: __init__.py
src/aqueduct_dagster/adapters/: __init__.py  cabq_adapter.py  hydrovu_adapter.py
src/aqueduct_dagster/canonical/: CANONICAL_MODEL.md  __init__.py  base_adapter.py  canonical_constants.py  canonical_model.py
src/aqueduct_dagster/defs/: dagster_logging.py  definitions.py
src/aqueduct_dagster/defs/assets/: ingest_cabq.py  ingest_hydrovu.py  load.py  transform_cabq.py  transform_hydrovu.py
src/aqueduct_dagster/loader/: __init__.py  frost_loader.py  watermark_store.py
src/aqueduct_dagster/pipeline/: cabq_dlt_pipeline.py  hydrovu_dlt_pipeline.py
tests/: test_cabq_adapter.py  test_frost_loader.py  test_frost_timeout.py  test_hydrovu_adapter.py  test_hydrovu_dlt_pipeline.py  test_watermark_store.py
