[project]
name = "aqueduct-poc-bravo"
version = "0.1.0"
description = "Aqueduct POC B — Dagster + dlt + GCS + FROST SensorThings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "dlt[filesystem]>=1.4.0",
    "dlt[gcs]>=1.4.0",
    "frost-sta-client>=1.3.0",
    "gcsfs>=2024.6.0",
    "google-cloud-storage>=2.17.0",
    "httpx>=0.27.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqueduct_dagster"]

[tool.dagster]
module_name = "aqueduct_dagster.defs.definitions"

[tool.ruff]
line-length = 100
