[project]
name = "aqueduct-poc-bravo"
version = "0.1.0"
description = "Aqueduct POC B — Dagster + dlt + GCS + FROST SensorThings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.9.0",
    "dagster-cloud>=1.13.8",
    "dagster-webserver>=1.9.0",
    "dlt[filesystem,gs]>=1.4.0",
    "frost-sta-client>=1.1.0",
    "gcsfs>=2024.6.0",
    "google-cloud-storage>=2.17.0",
    "httpx>=0.27.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "toml>=0.10.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.13.8",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqueduct_dagster"]

[tool.dagster]
module_name = "aqueduct_dagster.defs.definitions"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `ruff format` already wraps code at line-length; it can't split long strings,
# comments, or docstrings, so E501 only nags about those. Disable it per Ruff's
# recommendation when using the formatter.
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "dlt.*",
    "gcsfs.*",
    "pyarrow.*",
    "toml.*",
    "frost_sta_client.*",
    "google.*",
]
ignore_missing_imports = true
